2011-7-7
Added lexicon learning by HMM/Model1 + a script to perform bidirectional alignment combination
Added alignment constrained learning in HMM/Model1
Added online learning (MIRA/CW/AROW) for kbest-based learner

2011-6-30
Bugfix for kbest oracle for taking unique
Bugfix for oracle computer memorize the best-so-forth results, instead of the previously best
Revised cicada_learn{,_kbest}{,_mpi} so that the constant hyperparameter is independent of the training data size
Evaluator can take directory input
Evaluator can assign an individual score to each sentence with base document.
Compact memory consumption in parse-{cky,tree,tree-cky}

2011-6-27
Serious bugfix for parse-{cky,tree,tree-cky} where the features from source lattice/forest(s) are completely ignored for pruning.
Added format, a formatter/parser derived from ICU's number/date format/parse
Added grammar-format, grammar using the ICU's number/date formatter/parser as our rule!
Added experimental kbest-based learner/mert/oracle computer with support for liblinear solver
Support multiple forest loading in cicada_learn_mpi and added an option to load previously training parameters
Support margin-based learning in cicada_learn_mpi

2011-6-6
Reimplemented scorer for extracted counts.
   Previously we store all the target side counts in a DB, but now we use re-sort based implementation
   found in moses script, though it requires extra storage.
Tweaked parameters for grammar-static and tree-grammar-static for large data indexing.

2011-6-1
Bugfix for mpi version of extract-score. Instead of pushing into stream, wait: We assume that send-buffer is large enough for better map-reduce

2011-5-30
Serious bugfix for {compose,parse}-{tree,tree-cky}: internal rules are not correctly computed
Serious bugfix for sentence input in cicada and cicada_mpi: by default, we will read in sentence-mode, instead of previous "lattice" then fallback to "sentence"
Added --input-sentence option to explicitly control the behavior